@startuml

title 12.1. Admin reference and inventory UI completion

hide circle
skinparam linetype ortho

entity Currency
entity Unit
entity InventoryReason
entity InventoryDocument
entity InventoryDocumentLine
entity StockMovement
entity StatusHistory

class CurrencyFixturePolicy <<policy>>
class UnitController <<admin>>
class InventoryReasonController <<admin>>
class InventoryDocumentController <<admin>>
class StatusTimelineComponent <<twig>>

CurrencyFixturePolicy --> Currency : fixture-only dictionary
UnitController --> Unit : manage per store
InventoryReasonController --> InventoryReason : manage stock reasons
InventoryDocumentController --> InventoryDocument : inspect documents
InventoryDocument --> InventoryDocumentLine : lines
InventoryDocumentLine --> StockMovement : posted movements
InventoryDocumentController --> StatusTimelineComponent : show status history
StatusTimelineComponent --> StatusHistory : render generic timeline

note right of Currency
  Current status:
  - Currency entity and fixtures exist.
  - Store, documents, payments and prices use Currency.
  - No dedicated Currency admin controller exists.

  Decision:
  - Currencies stay fixture/admin seed data for now.
  - Do not add store-admin Currency CRUD in 12.1 because historical
    prices, payments and inventory documents depend on stable codes,
    decimal places and symbols.
  - If editable currency dictionaries become necessary later, add a
    restricted super-admin flow with explicit historical-data guards.
end note

note right of Unit
  Current status:
  - Unit entity exists and Product forms use it.
  - Dedicated Unit admin index/new/edit/show exists.
  - Archive action uses inactive status + deletedAt,
    without hard deleting historical reference data.

  Remaining completion:
  - Re-check product selection behavior before deciding whether
    inactive-but-not-archived units should be hidden from new products.
  - Keep old product/order snapshots readable.
end note

note right of InventoryReason
  Current status:
  - InventoryReason entity exists.
  - Inventory documents can reference a reason.
  - Dedicated InventoryReason admin index/new/edit/show exists.
  - Store + type + name uniqueness is validated before save.
  - Archive action uses inactive status + deletedAt.

  Remaining completion:
  - Reuse this dictionary in write-off and stock-adjustment
    document creation flows when those screens are added.
end note

note right of InventoryDocument
  Current status:
  - Backend posting/cancel/reversal exists.
  - StatusHistory is written for post/cancel.
  - Dedicated admin index/show/history exists.
  - Show renders header, lines, posted stock movements,
    linked order/purchase/production document and generic status timeline.
  - Post/cancel actions are CSRF-protected and delegate to
    InventoryPostingService.

  Remaining completion:
  - Creation flows for returns, write-off, adjustment and transfer
    stay in 12.4 advanced inventory operations.
end note

note bottom
  Suggested implementation order:

  1. Unit admin CRUD because Product forms already depend on it. [done]
  2. InventoryReason admin CRUD for stock adjustment/write-off flows. [done]
  3. InventoryDocument index/show with line/movement details. [done]
  4. StatusHistory timeline on InventoryDocument show. [done]
  5. Currency remains fixture-only for 12.1. [done]
  6. Controller tests for store scoping, soft archive, posting
     and timeline render. [done]
end note

@enduml
